Saving before merge